--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,18 +1,18 @@
 [versions]
 accompanist = "0.37.3"
-agp = "8.13.0"
-androidx-activity = "1.11.0"
+agp = "9.0.0"
+androidx-activity = "1.12.2"
 androidx-core = "1.17.0"
-androidx-lifecycle = "2.9.4"
-androidx-splashscreen = "1.0.1"
-apksig = "8.13.0"
+androidx-lifecycle = "2.10.0"
+androidx-splashscreen = "1.2.0"
+apksig = "9.0.0"
 axml = "1.0.1"
 binary-resources = "2.1.0"
-bouncycastle = "1.82"
+bouncycastle = "1.83"
 coil = "3.3.0"
-compose = "1.9.4"
+compose = "1.10.1"
 compose-material3 = "1.4.0"
-compose-pipette = "1.0.1"
+compose-pipette = "2.0.0-beta03"
 desugaring = "2.1.5"
 dhizuku = "2.5.4"
 diff = "4.16"
@@ -20,10 +20,10 @@ hiddenApi-bypass = "6.1"
 hiddenApi-refine = "4.4.0"
 hiddenApi-stub = "4.4.0"
 koin = "4.1.1"
-kotlin = "2.2.21"
+kotlin = "2.3.0"
 kotlinx-immutable = "0.4.0"
-kotlinx-serialization = "1.9.0"
-ktor = "3.3.1"
+kotlinx-serialization = "1.10.0"
+ktor = "3.4.0"
 libsu = "6.0.0"
 microg = "0.3.6.244735"
 shimmer = "1.3.3"
@@ -154,7 +154,6 @@ voyager = [
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
 compose-compiler = { id = "org.jetbrains.kotlin.plugin.compose", version.ref = "kotlin" }
-kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
 kotlin-parcelize = { id = "org.jetbrains.kotlin.plugin.parcelize", version.ref = "kotlin" }
 kotlin-serialization = { id = "org.jetbrains.kotlin.plugin.serialization", version.ref = "kotlin" }
 hiddenApi-refine = { id = "dev.rikka.tools.refine", version.ref = "hiddenApi-refine" }
